style(driver): fixing driver item when on mobile

--- a/src/views/containers/driverManagement/driverManagement.scss
+++ b/src/views/containers/driverManagement/driverManagement.scss
@@ -29,6 +29,7 @@
     @media(max-width: $resolution-mobile){
         display: block;
         width: calc(100% - 48px);
+        margin: 0px auto;
         margin-bottom: 24px;
         &:last-child{
             margin-bottom: 0px;
